alignment fixed
proper alignment for vega docs button

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -58,7 +58,7 @@
 }
 
 .docs-link {
-  align-self: flex-end;
+  align-self: flex;
 }
 
 .modal-background {
